<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_verguide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_guide"
        android:textColor="@android:color/white"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/login_fragment_input_mobile"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:layout_below="@id/login_verguide"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/hint_mobile_input"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorHint" />

    <Button
        android:id="@+id/login_fragment_button_send"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_white"
        android:layout_below="@id/login_fragment_input_mobile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/login_button_send_code"/>

</RelativeLayout>